# detfuzz

./: .gitignore  README.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml
configs/: v0-powershell-encoded-command.sigma.yml
demo/: detfuzz-demo.ps1
docs/: demo-runbook.md  demo-talk-track.md  evidence-checklist.md  phase-2-summary.md  phase-2-vm-validation.md  phase-3-summary.md  phase-3-vm-validation-commands.md  phase-3-vm-validation.md  phase-4-summary.md  phase-4-vm-validation-commands.md  phase-4-vm-validation.md  phase-5-summary.md  phase-5-vm-validation.md  phase-6-evidence-boundary.md  phase-6-summary.md  phase-6-vm-validation-commands.md  phase-6-vm-validation.md  phase-7-evidence-boundary.md  phase-7-summary.md  phase-7-vm-validation-commands.md  phase-7-vm-validation.md  phase-plan.md  report-generation.md  timeout-calibration-clock-preflight.md  v0-suite-run-validation.md  v0-suite-runner.md  version-boundary.md  vm-setup-checklist.md
evidence/: README.md  suite-report.md
src/detfuzz/: __init__.py  benign.py  calibration.py  cases.py  classifier.py  cli.py  contract.py  detection.py  identity.py  models.py  mutations.py  oracle.py  payloads.py  report.py  runner.py  suite.py  telemetry.py
src/detfuzz/configs/: v0-rule-dependencies.json
src/detfuzz/contracts/: detfuzz-suite-report-1.0.schema.json
tests/: test_benign.py  test_calibration.py  test_classifier.py  test_cli.py  test_contract.py  test_detection.py  test_identity.py  test_oracle.py  test_report.py  test_runner.py  test_suite.py  test_telemetry.py
