[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "detfuzz"
version = "0.1.0"
description = "Detection rule mutation and resilience testing platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DetFuzz contributors" }]
dependencies = ["pysigma==1.4.0"]

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "ruff==0.15.22",
]

[project.scripts]
detfuzz = "detfuzz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
detfuzz = ["configs/*.yml", "configs/*.json", "contracts/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
sqlite_cache = false
